fix: adjust book dimensions and improve styling for front and back covers

--- a/solutions/tools/bookstyle_wordlearning/bookstyle_wordlearning.css
+++ b/solutions/tools/bookstyle_wordlearning/bookstyle_wordlearning.css
@@ -23,7 +23,7 @@ img {
 .book {
     position: relative;
     width: 350px;
-    height: 500px;
+    height: 400px;
     transition: transform 0.5s;
 }
 
@@ -52,14 +52,14 @@ img {
     z-index: 1;
     backface-visibility: hidden;
     border-left: 3px solid powderblue;
-    border-radius: 20% 20% 0 0;
-    box-shadow: 10px 0 0 0 #00000080;
+    border-radius: 0 20% 20% 0;
+    box-shadow: 3px 0 0 0 #00000080;
 }
 
 .back {
     z-index: 0;
-      border-radius: 0 0 20% 20%;
-    box-shadow: 0 0 10px #00000080;
+    border-radius: 20% 0 0 20%;
+    box-shadow: 0 0 3px #00000080;
 }
 
 .front-content,
@@ -87,3 +87,4 @@ button {
     border: none;
     background-color: transparent;
     cursor: pointer
+}
